--- a/style.css
+++ b/style.css
@@ -446,14 +446,41 @@ img {
 	max-width: 20rem;
 }
 
-.latestproj__card img {
-	width: 100%;
-	height: 100%;
+.latestproj__card {
+	background-color: transparent;
+	background-image: url(/assets/FOR\ ALL\ THE\ DOGS.jpg);
+	width: 43.5rem;
+	height: 70rem;
 	max-width: 100%;
 	max-height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
+.latestproj__card p {
+	color: var(--light);
+	font-weight: 700;
+	transform: translateY(35rem);
+}
 
+.latestproj__card h3 {
+	color: var(--light);
+	font-weight: 700;
+	font-size: 4rem;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	margin-top: 35rem;
+}
+
+.latestproj__card a {
+	border: var(--light) solid 2px;
+	border-radius: 1rem;
+	padding: 1rem 2rem;
+	background-color: #f0f0f0;
+}
 
 /* REPEATABLE PATTERNS */
 
