--- a/style.css
+++ b/style.css
@@ -481,7 +481,10 @@ img {
 	padding: 1rem 2rem;
 	background-color: #f0f0f0;
 }
-
+.latestproj__card a:hover {
+	transition: 0.2s ease-in-out;
+	background-color: var(--green);
+}
 /* REPEATABLE PATTERNS */
 
 :root {
