--- a/style.css
+++ b/style.css
@@ -485,6 +485,135 @@ img {
 	transition: 0.2s ease-in-out;
 	background-color: var(--green);
 }
+
+/* hiremepleaseomg */
+
+.hireme{
+	width:100%;
+	padding-top: 3rem;
+	}
+	.hire__wrapper{
+	  transform: translateY(-20rem);
+	  display: flex;
+	  margin:20rem;
+	  gap: 3rem;
+	} 
+	.hire__left{
+	  padding-top: 1rem;
+	}
+	.hire__left h3{
+	  font-size: 5rem;
+	  font-weight: 700;
+	  padding-bottom: 2rem;
+	}
+	.hire__left p{
+	  font-size:2rem;
+	  padding-bottom: 3rem;
+	}
+	.hire__left span{
+	  font-weight:700;
+	}
+	.hire__info li{
+	  color: var(--gray);
+	  font-size: 1.5rem;
+	  padding-bottom: 1.5rem;
+	  padding:1rem 1.5rem;
+	  border: 2px solid var(--gray);
+	  margin-bottom: 3rem;
+	  border-radius: .5rem;
+	}
+	.hire__info li:last-child{
+	  padding-bottom: 7rem;
+	}
+	.hire__right img{
+	  width: 50rem;
+	  margin:0 auto;
+	  border-radius: 1.5rem;
+	}
+	.hire__left a {
+	  display: inline-block;
+	  padding: 2rem 5rem;
+	  border-radius: 1rem;
+	  background-color: var(--green);
+	  color:var(--light);
+	  text-decoration: none;
+	  position:absolute;
+	}
+	.hire__left a:hover {
+	  display: inline-block;
+	  padding: 2rem 5rem;
+	  border-radius: 1rem;
+	  background-color: var(--dark);
+	  color:var(--green);
+	  border:2px solid var(--green);
+	  text-decoration: none;
+	  position: absolute;
+	}
+	/* footer */
+
+	footer{
+		background:var(--dark);
+		padding-top: 1rem;
+		height: 13vh;
+	  }
+	  .footer__wrapper{
+		height:auto;
+		display: flex;
+		justify-content: space-between;
+		max-width:100%;
+		margin: 0 auto;
+	  }
+	  .footer__left{
+		display: flex;
+		align-items: center;
+	  }
+	  .footer__left img {
+		width: 8rem;
+		height: 8rem;
+		object-fit: cover;
+		border-radius: 50%;
+		border: 2px solid var(--light);
+	  }
+	  .footer__mid{
+		transform: translateX(15rem);
+		display: flex;
+		align-items: center;
+	  }
+	  .footer__mid ul{
+		display: flex;
+		gap: 3rem;
+		font-size:2rem;
+	  }
+	  .footer__mid ul a {
+		color: var(--light);
+		padding: 1rem;
+		border-radius: 50%;
+		border: 2px solid var(--light);
+		width: 4rem;
+		height: 4rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-decoration: none;
+	  }
+	  .footer__mid ul a:hover {
+		color: var(--green);
+		border: 2px solid var(--green);
+	  
+	  }
+	  .footer__right{
+		display: flex;
+		align-items: center;
+	  }
+	  .footer__right p{
+		color: var(--light);
+	  }
+  
+	
+
+
+
+
 /* REPEATABLE PATTERNS */
 
 :root {
